desk: fix overlap for top part of bottom part (widecontent2 class)

--- a/siteMedia/desk/desk.css
+++ b/siteMedia/desk/desk.css
@@ -65,7 +65,7 @@ div.content {
 
 .widecontent2 { 
     margin: 8px 0 0 0;
-	width: 550px;
+	width: 500px;
 	}
 
 .form { 
